--- a/.gitignore
+++ b/.gitignore
@@ -7,4 +7,5 @@ test/dummy/log/*.log
 test/dummy/tmp/
 test/dummy/.sass-cache
 tmp/*
+lib/volt_wrapper/app/main/config/dependencies.rb
 example/tmp/*
