Sync commit with bglusman/volt f91565d252
WIP dealing with rails errors after volt
errors resolved (I think)

Rails errors are confusing, can work around some
(don't isolate namespace, disable verify_auth)
but unsure why they changed, latter may be Faye
related, but the namespace one is mysterious

--- a/example/Gemfile
+++ b/example/Gemfile
@@ -27,8 +27,7 @@ gem 'sdoc', '~> 0.4.0',          group: :doc
 gem 'spring',        group: :development
 
 #needed for now?
-gem 'volt',        git: "git://github.com/bglusman/volt"
-gem 'volt-sockjs', git: "git://github.com/bglusman/sockjs-ruby"
+gem 'volt',        git: "git://github.com/bglusman/volt", branch: 'resolve_upstream_conflicts'
 # gem 'volt-bootstrap_jumbotron_theme'
 # gem 'volt-user_templates'
 
